# cipherbft

./: .gitignore  .rustfmt.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  security.yml
crates/abci-client/: Cargo.toml
crates/abci-client/src/: client.rs  codec.rs  lib.rs  transport.rs
crates/cipherbft/: Cargo.toml
crates/cipherbft/src/: main.rs
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: car.rs  codec.rs  config.rs  context.rs  engine.rs  error.rs  execution_handler.rs  host.rs  lib.rs  network.rs  proposal.rs  proposer_selector.rs  signing.rs  staking_bridge.rs  state_machine.rs  sync.rs  timeouts.rs  types.rs  validator_set.rs  validator_set_manager.rs  vote.rs  vote_set.rs  wal.rs
crates/consensus/tests/: decision_execution_test.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: bls_bench.rs
crates/crypto/src/: bls.rs  ed25519.rs  error.rs  hash.rs  keys.rs  lib.rs  secp256k1.rs  signature.rs
crates/crypto/src/keyring/: error.rs  file.rs  mod.rs  os.rs  test.rs
crates/crypto/src/keystore/: checksum.rs  cipher.rs  encrypted.rs  error.rs  kdf.rs  mod.rs
crates/crypto/src/mnemonic/: derive.rs  error.rs  generate.rs  mod.rs
crates/crypto/src/secure/: material.rs  mod.rs  secret.rs
crates/crypto/tests/: key_management_test.rs  proptest_mnemonic.rs
crates/data-chain/: Cargo.toml
crates/data-chain/benches/: attestation_bench.rs  car_bench.rs
crates/data-chain/src/: attestation.rs  batch.rs  car.rs  cut.rs  error.rs  lib.rs  messages.rs  storage.rs
crates/data-chain/src/primary/: attestation_collector.rs  config.rs  core.rs  cut_former.rs  mod.rs  proposer.rs  runner.rs  state.rs
crates/data-chain/src/worker/: batch_maker.rs  config.rs  core.rs  mod.rs  state.rs  synchronizer.rs
crates/data-chain/tests/: crash_recovery.rs  worker_persistence_test.rs
crates/execution/: Cargo.toml  DESIGN.md  DESIGN_ko.md
crates/execution/src/: bridge.rs  database.rs  engine.rs  error.rs  evm.rs  genesis.rs  lib.rs  mpt.rs  proof.rs  receipts.rs  rlp.rs  state.rs  state_provider.rs  types.rs
crates/execution/src/inspector/: call_tracer.rs  mod.rs  opcode_tracer.rs  types.rs
crates/execution/src/precompiles/: adapter.rs  mod.rs  provider.rs  staking.rs
crates/execution/tests/: bridge_test.rs  engine_integration_tests.rs  execution_result_tests.rs  real_transactions_tests.rs  staking_precompile_tests.rs  state_root_checkpoint_tests.rs
crates/mempool/: Cargo.toml  README.md
crates/mempool/src/: account.rs  config.rs  error.rs  lib.rs  mempool.rs  pool.rs  priority_queue.rs  transaction.rs  validator.rs
crates/mempool/tests/: mempool_tests.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: consensus.rs  dcl.rs  execution.rs  lib.rs  mempool.rs  network.rs  server.rs  storage.rs
crates/node/: Cargo.toml
crates/node/src/: client_config.rs  config.rs  execution_bridge.rs  execution_sync.rs  genesis_bootstrap.rs  lib.rs  main.rs  mempool_state.rs  network.rs  network_api.rs  node.rs  supervisor.rs  sync_executor.rs  sync_network.rs  sync_runner.rs  sync_server.rs  util.rs  worker_pool_adapter.rs
crates/node/src/key_cli/: add.rs  common.rs  export.rs  generate.rs  import.rs  list.rs  migrate.rs  mod.rs
crates/node/tests/: cli_extra_alloc.rs  cli_genesis_generate.rs  cli_validate.rs  genesis_bootstrap.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: codec.rs  discovery.rs  lib.rs  network.rs  peer.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: adapters.rs  api.rs  builder.rs  config.rs  error.rs  filters.rs  handlers.rs  lib.rs  metrics.rs  middleware.rs  net.rs  pubsub.rs  server.rs  traits.rs  types.rs  web3.rs  websocket.rs
crates/rpc/src/debug/: mod.rs
crates/rpc/src/eth/: api.rs  mod.rs
crates/rpc/src/providers/: block.rs  error.rs  evm.rs  logs.rs  mod.rs  state.rs  txpool.rs
crates/rpc/src/txpool/: api.rs  mod.rs
crates/rpc/tests/: e2e_transaction_test.rs  eth_api_test.rs  eth_extended_test.rs  filter_test.rs  integration_test.rs  middleware_test.rs  storage_integration_test.rs  subscription_test.rs
crates/storage/: Cargo.toml  INTEGRATION_PLAN.md  MDBX_IMPLEMENTATION.md
crates/storage/src/: batch.rs  blocks.rs  blockstore.rs  dcl.rs  error.rs  evm.rs  lib.rs  logs.rs  memory.rs  persistent_state.rs  pruning.rs  receipts.rs  recovery.rs  staking.rs  statestore.rs  sync.rs  tables.rs  transactions.rs  wal.rs
crates/storage/src/mdbx/: batch.rs  blocks.rs  database.rs  evm.rs  logs.rs  mod.rs  persistent_state.rs  provider.rs  receipts.rs  staking.rs  sync.rs  tables.rs  transactions.rs  wal.rs
crates/storage/tests/: batch_store_test.rs  mdbx_dcl_store_test.rs
crates/sync/: Cargo.toml
crates/sync/src/: blocks.rs  error.rs  execution.rs  lib.rs  manager.rs  metrics.rs  network.rs  peers.rs  progress.rs  protocol.rs  snapshot.rs
crates/sync/src/snap/: accounts.rs  mod.rs  storage.rs  verify.rs
crates/types/: Cargo.toml
crates/types/src/: block.rs  genesis.rs  geth.rs  hash.rs  height.rs  lib.rs  round.rs  validator.rs  vote.rs
devnet/: genesis.json
devnet/keys/: validator-0.json  validator-1.json  validator-2.json
devnet/node0/config/: node.json
docker/: docker-compose.yml
docker/prometheus/: prometheus.yml
docs/: TASKS.md  malachite-integration-notes.md  parallel-signature-verification.md  validator-beneficiary.md
docs/architecture/: README.md  adr-001-three-layer-architecture.md  adr-002-evm-native-execution.md  adr-003-malachite-consensus.md  adr-004-primary-worker-architecture.md  adr-005-dual-signatures.md  adr-005-ed25519-signatures.md  adr-006-mempool-design.md  adr-007-p2p-networking.md  adr-008-json-rpc-interface.md  adr-009-staking-precompile.md  adr-010-storage-design.md  adr-011-configuration-operations.md  adr-012-state-root-handling.md  adr-013-commonware-aggregation.md
scripts/: benchmark-docker.sh  benchmark-simple.sh  debug_block_fetch.sh  generate-compose.sh  reset-devnet.sh  setup-devnet.sh  start-devnet.sh  stop-devnet.sh
(+11 files in other folders)
