[workspace]
members = [
    "crates/types",
    "crates/crypto",
    "crates/data-chain",
    "crates/storage",
    "crates/node",
    "crates/consensus",
    "crates/execution",
    # "crates/mempool",  # Temporarily excluded - requires reth v1.8.4+ migration due to c-kzg dependency conflict
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CipherBFT Contributors"]
license = "MIT"
repository = "https://github.com/decipherhub/cipherbft"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"

# ABCI & Tendermint types
tendermint = "0.37"
tendermint-proto = "0.37"

# Serialization
prost = "0.12"
bytes = "1.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
ed25519-consensus = "2.1"
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
blst = "0.3"

# Collections
bitvec = "1.0"

# Storage
rocksdb = { version = "0.21", default-features = false, features = ["lz4"] }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", default-features = false, features = ["mdbx"] }
reth-db-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-codecs = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = ["return-borrowed"] }

# Networking
futures = "0.3"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

# Utilities
hex = "0.4"
toml = "0.8"
chrono = "0.4"

# Actor framework (used by Malachite)
ractor = "0.9"

# Borsh serialization (used by Malachite codec)
borsh = { version = "1", features = ["derive", "de_strict_order"] }

# Malachite BFT (gated behind the consensus crate's `malachite` feature)
# NOTE: borsh feature enabled for serialization support
informalsystems-malachitebft-app = { version = "0.5", default-features = false }
informalsystems-malachitebft-app-channel = { version = "0.5", default-features = false }
informalsystems-malachitebft-core-consensus = { version = "0.5", default-features = false, features = ["borsh"] }
informalsystems-malachitebft-core-driver = { version = "0.5", default-features = false }
informalsystems-malachitebft-core-types = { version = "0.5", default-features = false, features = ["borsh"] }
informalsystems-malachitebft-engine = { version = "0.5", default-features = false, features = ["borsh"] }
informalsystems-malachitebft-network = { version = "0.5", default-features = false }
informalsystems-malachitebft-config = { version = "0.5", default-features = false }
informalsystems-malachitebft-sync = { version = "0.5", default-features = false, features = ["borsh"] }
informalsystems-malachitebft-signing-ed25519 = { version = "0.5", default-features = false }
informalsystems-malachitebft-codec = { version = "0.5", default-features = false }
informalsystems-malachitebft-metrics = { version = "0.5", default-features = false }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
