[package]
name = "cipherbft"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cipherbft"
path = "src/main.rs"

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
abci-client = { path = "../abci-client" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool" }
p2p = { path = "../p2p" }
storage = { path = "../storage" }
rpc = { path = "../rpc" }

tokio = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
