[package]
name = "crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ed25519-consensus = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = "0.8"
