[package]
name = "cipherbft-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Cryptographic primitives for CipherBFT (BLS12-381 and Ed25519)"

[dependencies]
# Internal dependencies
cipherbft-types = { path = "../types" }

# BLS12-381
blst = "0.3"

# Ed25519
ed25519-consensus = { workspace = true }

# Hashing
sha2 = { workspace = true }

# RNG
rand = { workspace = true }

# Serialization
serde = { workspace = true }
hex = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "bls_bench"
harness = false
