[package]
name = "cipherbft-execution"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
# Internal dependencies
cipherbft-types = { path = "../types" }
cipherbft-crypto = { path = "../crypto" }

# EVM execution
revm = { version = "19", default-features = false, features = ["std", "secp256k1"] }
revm-primitives = "19"

# Merkle trie for root computation (compatible with alloy 0.8)
alloy-trie = "0.7"

# Ethereum types (using Alloy v0.8 for c-kzg compatibility with revm 19)
# Note: revm 19 uses c-kzg 1.x, so we need alloy versions that are compatible
alloy-primitives = "0.8"
alloy-consensus = { version = "0.8", features = ["serde"] }
alloy-eips = "0.8"
alloy-rlp = "0.3"

# Error handling
thiserror = "2"

# Derive macros (required by alloy dependencies)
derive_more = { version = "1.0", features = ["display", "from"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Concurrency
parking_lot = "0.12"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }

# Collections
lru = "0.12"
dashmap = "6"

# Encoding
hex = "0.4"

[dev-dependencies]
# Property-based testing
proptest = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
tempfile = "3"


[lints.rust]
unsafe_code = "deny"
