[package]
name = "cipherbft-execution"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license.workspace = true

[dependencies]
# Internal dependencies
cipherbft-types = { path = "../types" }
cipherbft-crypto = { path = "../crypto" }
cipherbft-data-chain = { path = "../data-chain" }
cipherbft-storage = { path = "../storage", optional = true }
cipherbft-metrics = { path = "../metrics" }

# EVM execution (revm 33.x uses modular crates)
revm = { version = "33.1.0", default-features = false, features = ["std", "secp256k1"] }
revm-primitives = "21"
revm-state = "8"

# Merkle trie for root computation (compatible with alloy 1.x)
alloy-trie = "0.9"

# Ethereum types (using Alloy v1.x for c-kzg 2.x compatibility with revm 33)
# Note: revm 33 uses c-kzg 2.x, requires alloy 1.x series
alloy-primitives = "1"
alloy-consensus = { version = "1", features = ["serde"] }
alloy-eips = "1"
alloy-rlp = "0.3"
alloy-sol-types = "1"

# Reth storage API for StateProviderFactory (matching workspace v1.10.0)
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }

# Error handling
thiserror = "2"

# Derive macros (required by alloy dependencies)
derive_more = { version = "1.0", features = ["display", "from"] }
auto_impl = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Concurrency
parking_lot = "0.12"
rayon = "1.10"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

# Collections
lru = "0.12"
dashmap = "6"

# Encoding
hex = "0.4"

# c-kzg compatibility (force version 2.x for revm 33)
c-kzg = "2.0"

[dev-dependencies]
# Property-based testing
proptest = "1"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
tempfile = "3"

# Transaction signing for tests
alloy-signer = "1"
alloy-signer-local = "1"


[features]
default = []
mdbx = ["cipherbft-storage/mdbx", "cipherbft-storage"]

[lints.rust]
unsafe_code = "deny"
