[package]
name = "mempool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Reth transaction pool and primitives
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "v1.1.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "v1.1.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", rev = "v1.1.0" }

# Ethereum types (alloy suite - use Reth compatible version)
alloy-primitives = "0.8"
alloy-eips = "0.4"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", rev = "v1.1.0", features = ["test-utils"] }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "v1.1.0", features = ["test-utils"] }
