[package]
name = "mempool"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Reth transaction pool and primitives (matching workspace v1.10.0)
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }

# Ethereum types (alloy suite - reth 1.10.0 uses alloy 1.x)
alloy-primitives = "1"
alloy-eips = "1"
alloy-consensus = "1"
alloy-rlp = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0", features = ["test-utils"] }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0", features = ["test-utils"] }
