[package]
name = "cipherbft-metrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prometheus = { version = "0.13", default-features = false }
once_cell = "1.19"
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { workspace = true }
tracing = { workspace = true }
