[package]
name = "cipherd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CipherBFT Node - MVP for DCL testing"

[[bin]]
name = "cipherd"
path = "src/main.rs"

[dependencies]
# Internal dependencies
cipherbft-types = { path = "../types" }
cipherbft-crypto = { path = "../crypto" }
cipherbft-data-chain = { path = "../data-chain" }
cipherbft-storage = { path = "../storage" }
cipherbft-execution = { path = "../execution" }
cipherbft-consensus = { path = "../consensus", features = ["malachite"] }

# Ethereum primitives (for genesis types in tests)
alloy-primitives = { version = "1", features = ["serde"] }

# Async runtime
tokio = { workspace = true, features = ["full", "signal"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Crypto
rand = { workspace = true }
hex = { workspace = true }

# Key management CLI (T030-T038)
rpassword = { workspace = true }
zeroize = { workspace = true }

# Time handling (for genesis generation)
chrono = { workspace = true }

# Malachite BFT (for consensus actor refs)
informalsystems-malachitebft-metrics = { workspace = true }
informalsystems-malachitebft-network = { workspace = true }

# RPC client (T048 - status query via JSON-RPC)
jsonrpsee = { workspace = true, features = ["http-client"] }

[dev-dependencies]
tempfile = { workspace = true }
# CLI testing (T041-T042)
assert_cmd = "2.0"
predicates = "3.0"
