[package]
name = "cipherbft-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CipherBFT JSON-RPC Server - Ethereum-compatible RPC interface"

[dependencies]
# Internal dependencies
cipherbft-types = { path = "../types" }

# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }
async-trait = { workspace = true }
futures = { workspace = true }

# JSON-RPC
jsonrpsee = { workspace = true }

# Ethereum types (alloy)
alloy-primitives = { workspace = true }
alloy-rlp = "0.3"
alloy-rpc-types = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-consensus = { workspace = true }

# Reth primitives for Ethereum compatibility
reth-primitives = { workspace = true }

# Middleware and utilities
tower = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & Metrics
tracing = { workspace = true }
prometheus = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
hex = { workspace = true }
once_cell = "1.19"

# Rate limiting
governor = "0.6"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
