[package]
name = "cipherbft-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CipherBFT JSON-RPC Server - Ethereum-compatible RPC interface"

[dependencies]
# Internal dependencies
cipherbft-types = { path = "../types" }
cipherbft-execution = { path = "../execution" }
cipherbft-mempool = { path = "../mempool" }
cipherbft-storage = { path = "../storage", features = ["mdbx"] }

# Async runtime
tokio = { workspace = true, features = ["full", "sync"] }
async-trait = { workspace = true }
futures = { workspace = true }

# JSON-RPC
jsonrpsee = { workspace = true }

# Ethereum types (alloy)
alloy-primitives = { workspace = true }
alloy-rlp = "0.3"
alloy-rpc-types = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { version = "1", default-features = false, features = ["serde"] }
alloy-serde = "1"

# Reth primitives for Ethereum compatibility
reth-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.0" }

# EVM execution (revm 33.x uses modular crates)
revm = { version = "33.1.0", default-features = false, features = ["std", "secp256k1"] }
revm-primitives = "21"

# Middleware and utilities
tower = { workspace = true }
tower-http = { workspace = true }
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging & Metrics
tracing = { workspace = true }
prometheus = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
hex = { workspace = true }
once_cell = "1.19"

# Rate limiting
governor = "0.6"

# Concurrency
parking_lot = "0.12"

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"

# E2E test dependencies
alloy-signer = "1"
alloy-signer-local = "1"
