[package]
name = "cipherbft-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core type definitions for CipherBFT"

[dependencies]
serde = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
borsh = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
